Some product services methods created!